# moonshot

./: .gitignore  CLAUDE.md  README.md
backend/: .env.example  main.py  pyproject.toml
frontend/: package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/custom/create/: page.tsx
frontend/app/custom/game/: page.tsx
frontend/app/game/: page.tsx
frontend/app/lobby/: page.tsx
frontend/app/surf/game/: page.tsx
frontend/app/surf/lobby/: page.tsx
frontend/components/: CustomGame.tsx  CustomHUD.tsx  CustomRevealScreen.tsx  Game.tsx  HUD.tsx  PriceLine.tsx  RevealScreen.tsx  SurfGame.tsx  SurfHUD.tsx  SurfRevealScreen.tsx
frontend/lib/: customGameStorage.ts  useGameEngine.ts  useLiquid.ts  useMockPrice.ts
frontend/types/: index.ts
