[project]
name = "moonshot-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "uvicorn",
  "websockets",
  "python-dotenv",
  "httpx",
  "pyjwt",
  "liquidtrading-python",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
