[project]
name = "moonshot-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "uvicorn",
  "websockets",
  "python-dotenv",
  "httpx",
  "liquidtrading-python",
  "anthropic",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
